--- a/ServerSide.swift/Files/Public/css/style.css
+++ b/ServerSide.swift/Files/Public/css/style.css
@@ -1,10 +1,12 @@
 body {
     background-color: black;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 
 .button {
-    /* width: 300px;
-    height: 300px; */
+    width: 300px;
     aspect-ratio: 1;
     padding: 8pt;
     background-color: #04AA6D;
@@ -13,7 +15,7 @@ body {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 16pt;
     border-radius: 50%;
     font-size: xxx-large;
     box-shadow: 0 8px rgb(22, 55, 20);
@@ -22,4 +24,20 @@ body {
 .button:active {
     box-shadow: 0 5px rgb(22, 55, 20);
     transform: translateY(4px);
+}
+
+.flex {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.centered {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+p {
+    font-size: 200pt;
 }
